# ztna

./: .dockerignore  .gitignore  Makefile  TODO.md  buf.gen.yaml  docker-compose.yml  idea.md
.github/workflows/: release.yml
admin-api/: package-lock.json  package.json  tsconfig.json
admin-api/src/: config.ts  grpc.ts  index.ts  install.ts  store.ts  time.ts  types.ts
admin-web/: index.html  package-lock.json  package.json  vite.config.ts  ztna-controller-ca.pem
admin-web/src/: App.tsx  styles.css  types.ts
admin-web/src/api/: client.ts
admin-web/src/components/: CopyButton.tsx
agent/: Cargo.toml  build.rs
agent/src/: cli.rs  config.rs  grpc.rs  main.rs  pb.rs
agent/src/bootstrap/: mod.rs
agent/src/dataplane/: mod.rs
agent/src/enrollment/: client.rs  csr.rs  (+1 more)
connector/: Cargo.toml
connector/src/: cli.rs  config.rs  main.rs
connector/src/bootstrap/: ca_fetch.rs
connector/src/dataplane/: mod.rs  service.rs
connector/src/enrollment/: client.rs  csr.rs
connector/src/heartbeat/: mod.rs
connector/src/identity/: device_id.rs  keypair.rs  keystore.rs  mod.rs
connector/src/mtls/: mod.rs  peer_validate.rs
connector/src/renewal/: mod.rs  scheduler.rs
connector/src/revocations/: mod.rs
connector/src/storage/: file_store.rs  mod.rs
controller/: go.mod  go.sum
deploy/docker/: agent.Dockerfile  connector.Dockerfile
deploy/postgres/: init.sql
deploy/tls/: controller.crt  controller.key
docs/: GITHUB_RELEASES.md  admin-dashboard.md  api.md  dev-setup.md  security.md
proto/breaking/: README.md  baseline.binpb
scripts/: install.sh
(+71 files in other folders)
